/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */

syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.apache.skywalking.oap.server.core.remote.grpc.proto";

service RemoteService {
    rpc call (stream RemoteMessage) returns (Empty) {
    }
}

message RemoteMessage {
    string nextWorkerName = 1;
    RemoteData remoteData = 3;
}

message RemoteData {
    repeated string dataStrings = 1;
    repeated int64 dataLongs = 2;
    repeated double dataDoubles = 3;
    repeated int32 dataIntegers = 4;
    repeated string dataObjectStrings = 5;
}

message Empty {
}
